--- a/app/src/main/res/layout/fragment_random_outfit.xml
+++ b/app/src/main/res/layout/fragment_random_outfit.xml
@@ -119,4 +119,50 @@
         app:layout_constraintTop_toBottomOf="@+id/tvSocksColour"
         android:layout_marginTop="16dp"
         />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp"
+        >
+
+        <RadioButton
+            android:id="@+id/rdSummer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Summer"
+            tools:layout_editor_absoluteX="84dp"
+            tools:layout_editor_absoluteY="294dp" />
+
+        <RadioButton
+            android:id="@+id/rdTransitional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Transitional"
+            tools:layout_editor_absoluteX="84dp"
+            tools:layout_editor_absoluteY="294dp" />
+
+        <RadioButton
+            android:id="@+id/rdWinter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Winter"
+            tools:layout_editor_absoluteX="84dp"
+            tools:layout_editor_absoluteY="294dp" />
+
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/btnGenerate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Generate"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
