--- a/app/src/main/res/layout/fragment_random_outfit.xml
+++ b/app/src/main/res/layout/fragment_random_outfit.xml
@@ -157,12 +157,14 @@
 
     <Button
         android:id="@+id/btnGenerate"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Generate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginHorizontal="16dp"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
