--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/landingRcmndBtn"
             android:layout_width="225dp"
             android:layout_height="50dp"
             android:layout_marginStart="158dp"
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/signUpBtn"
             android:layout_width="117dp"
             android:layout_height="48dp"
             android:layout_marginStart="53dp"
@@ -33,10 +33,10 @@
             android:text="Sign Up"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/landingRcmndBtn" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/logInBtn"
             android:layout_width="117dp"
             android:layout_height="48dp"
             android:layout_marginStart="72dp"
@@ -46,8 +46,8 @@
             android:text="Login"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button3"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintStart_toEndOf="@+id/signUpBtn"
+            app:layout_constraintTop_toBottomOf="@+id/landingRcmndBtn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
