--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,10 +47,43 @@
         <action
             android:id="@+id/action_landing_to_recommendations"
             app:destination="@id/recommendations" />
+        <action
+            android:id="@+id/action_landing_to_signUp"
+            app:destination="@id/signUp" />
+        <action
+            android:id="@+id/action_landing_to_signIn"
+            app:destination="@id/signIn" />
     </fragment>
     <fragment
         android:id="@+id/recommendations"
         android:name="com.example.wardroba.fragments.Recommendations"
         android:label="fragment_recommendations"
-        tools:layout="@layout/fragment_recommendations" />
+        tools:layout="@layout/fragment_recommendations" >
+        <action
+            android:id="@+id/action_recommendations_to_colourRecommendations"
+            app:destination="@id/colourRecommendations" />
+    </fragment>
+    <fragment
+        android:id="@+id/colourRecommendations"
+        android:name="com.example.wardroba.fragments.ColourRecommendations"
+        android:label="fragment_colour_recommendations"
+        tools:layout="@layout/fragment_colour_recommendations" />
+    <fragment
+        android:id="@+id/signIn"
+        android:name="com.example.wardroba.fragments.SignIn"
+        android:label="fragment_sign_in"
+        tools:layout="@layout/fragment_sign_in" >
+        <action
+            android:id="@+id/action_signIn_to_home22"
+            app:destination="@id/home2" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUp"
+        android:name="com.example.wardroba.fragments.SignUp"
+        android:label="fragment_sign_up"
+        tools:layout="@layout/fragment_sign_up" >
+        <action
+            android:id="@+id/action_signUp_to_home22"
+            app:destination="@id/home2" />
+    </fragment>
 </navigation>
