--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -10,18 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="293dp"
-            android:layout_height="313dp"
-            android:layout_marginStart="59dp"
-            android:layout_marginTop="167dp"
-            android:layout_marginEnd="59dp"
-            android:background="#00BF3535"
-            android:src="@drawable/t_shirt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <androidx.camera.view.PreviewView
+            android:id="@+id/preview_view_Container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
         <Button
             android:id="@+id/btnScan"
@@ -35,6 +27,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/preview_view_Container" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
