Implemented discard button. Returns to Recommendations screen

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -71,6 +71,9 @@
         <argument
             android:name="clothingColour"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_colourRecommendations_to_recommendations"
+            app:destination="@id/recommendations" />
     </fragment>
     <fragment
         android:id="@+id/signIn"
