--- a/app/src/main/res/layout/fragment_colour_recommendations.xml
+++ b/app/src/main/res/layout/fragment_colour_recommendations.xml
@@ -8,7 +8,7 @@
     tools:context=".fragments.ColourRecommendations" >
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/btnNotAButton"
         android:layout_width="360dp"
         android:layout_height="360dp"
         android:layout_marginHorizontal="8dp"
@@ -21,10 +21,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tvColourName"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvColourName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -34,22 +35,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/btnDiscard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="32dp"
-        android:text="Button"
+        android:text="Discard"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="Button"
+        android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -61,58 +62,63 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintBottom_toTopOf="@+id/btnDiscard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btnColour1"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnColour2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnColour3"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btnColour4"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/btnColour5"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvComplementary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -120,5 +126,14 @@
         android:text="Complementary Colours"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tvValues"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnNotAButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
