storing accessories functionality implemented, navigation from ColourRecommendations.kt to AddAccessory.kt added

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_addAccessory_to_home2"
             app:destination="@id/home2" />
+        <argument
+            android:name="clothingColour"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/randomOutfit"
