--- a/app/src/main/res/layout/fragment_colour_recommendations.xml
+++ b/app/src/main/res/layout/fragment_colour_recommendations.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ColourRecommendations" >
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnNotAButton"
         android:layout_width="360dp"
         android:layout_height="360dp"
@@ -66,7 +66,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnColour1"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -76,7 +76,7 @@
             android:textColor="#fff"
             tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnColour2"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -86,7 +86,7 @@
             android:textColor="#fff"
             tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnColour3"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -96,7 +96,7 @@
             android:textColor="#fff"
             tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnColour4"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -106,7 +106,7 @@
             android:textColor="#fff"
             tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnColour5"
             android:layout_width="50dp"
             android:layout_height="50dp"
