COLOUR TOWN BAY BAY! next to work on making the buttons circular

--- a/app/src/main/res/layout/fragment_colour_recommendations.xml
+++ b/app/src/main/res/layout/fragment_colour_recommendations.xml
@@ -13,13 +13,13 @@
         android:layout_height="360dp"
         android:layout_marginHorizontal="8dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
         android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvColourName"
         tools:ignore="SpeakableTextPresentCheck" />
@@ -31,6 +31,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Colour"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -131,8 +133,9 @@
         android:id="@+id/tvValues"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnNotAButton" />
 
