--- a/app/src/main/res/layout/fragment_colour_recommendations.xml
+++ b/app/src/main/res/layout/fragment_colour_recommendations.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ColourRecommendations" >
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnMainColour"
         android:layout_width="360dp"
         android:layout_height="360dp"
