--- a/app/src/main/res/layout/fragment_colour_recommendations.xml
+++ b/app/src/main/res/layout/fragment_colour_recommendations.xml
@@ -8,58 +8,76 @@
     tools:context=".fragments.ColourRecommendations" >
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnMainColour"
+        android:id="@+id/btnNotAButton"
         android:layout_width="360dp"
         android:layout_height="360dp"
         android:layout_marginHorizontal="8dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
         android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tvColourName"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <TextView
+        android:id="@+id/tvClothing"
+        android:layout_width="157dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="238dp"
+        android:text="Type of Clothing:"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnNotAButton" />
 
     <Spinner
         android:id="@+id/spnClothingType"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:spinnerMode="dropdown"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvClothing" />
+        app:layout_constraintTop_toBottomOf="@+id/tvClothing"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvColourName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="Colour"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="32dp"
-        android:text="save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnDiscard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="16dp"
+        android:text="Discard"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:text="discard"
+        android:layout_marginBottom="16dp"
+        android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -69,78 +87,82 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/btnSave"
+        app:layout_constraintBottom_toTopOf="@+id/btnDiscard"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/btnComp1"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnColour1"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
-            android:id="@+id/btnComp2"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnColour2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
-            android:id="@+id/btnComp3"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnColour3"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
-            android:id="@+id/btnComp4"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnColour4"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
-            android:id="@+id/btnComp5"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnColour5"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/round_button"
             android:gravity="center_vertical|center_horizontal"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            tools:ignore="SpeakableTextPresentCheck" />
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvComp"
+        android:id="@+id/tvComplementary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="4dp"
         android:text="Complementary Colours"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tvClothing"
-        android:layout_width="157dp"
-        android:layout_height="22dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="238dp"
-        android:text="Type of Clothing:"
+        android:id="@+id/tvValues"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMainColour" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
